# rustudemy

./: .gitignore  Cargo.toml  LICENSE  readme.md
udemy2024/: readme.md
udemy2024/ArrayOperationsInRust/: main.rs
udemy2024/PalindromeNumberChecker/: main.rs
udemy2024/SumOfDigitsFinder/: main.rs
udemy2024/TemperatureTracker/: main.rs
udemy2024_beginner/: readme.md
udemy2024_beginner/ArrayOperationsInRust/: Cargo.toml  main.rs
udemy2024_beginner/PalindromeNumberChecker/: Cargo.toml
udemy2024_beginner/SumOfDigitsFinder/: Cargo.toml
udemy2024_beginner/TemperatureTracker/: Cargo.toml
udemy2024_beginner/VectorOperationsFindingPrimes/: Cargo.toml  main.rs
udemy_auto_gpt_tools/: readme.md
udemy_auto_gpt_tools/my_lib/src/: lib.rs
udemy_auto_gpt_tools/my_proc_macro/: Cargo.toml
udemy_auto_gpt_tools/my_proc_macro/src/: lib.rs
udemy_auto_gpt_tools/playground/: Cargo.toml  inc.txt
udemy_auto_gpt_tools/playground/src/: m10_proc_macros.rs  m11_smart_pointers.rs  m12_concurrency.rs  m1_enums.rs  m2_structs.rs  m3_traits.rs  m4_polymorphism.rs  m4_polymothism.rs  m5_lifetimes.rs  m6_patterns.rs  m7_async.rs  m8_collections.rs  m9_decl_macros.rs  main.rs  my_funcs.rs
udemy_auto_gpt_tools/playground/src/my_mod_folder/: my_funcs.rs
