[package]
name = "my_rust_project"
version = "0.1.0"
edition = "2021"

# START: Define multiple binaries if necessary
# use cargo run --bin <name> in the correct subfolder

[[bin]]
name = "PalindromeNumberChecker"
path = "udemy2024/PalindromeNumberChecker/main.rs"

[[bin]]
name = "SumOfDigitsFinder"
path = "udemy2024/SumOfDigitsFinder/main.rs"

[[bin]]
name = "ArrayOperationsInRust"
path = "udemy2024/ArrayOperationsInRust/main.rs"

[[bin]]
name = "vector_operations_finding_primes"
path = "udemy2024/VectorOperationsFindingPrimes/main.rs"

[[bin]]
name = "temperature_tracker"
path = "udemy2024/TemperatureTracker/main.rs"

# END

[dependencies]
# Add your dependencies here, for example:
# rand = "0.8.4"
# regex = "1.5.4"

[build-dependencies]
# Add your build dependencies here if necessary