[package]
name = "my_rust_project"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vector_operations_finding_primes"
path = "main.rs"

[dependencies]
# Add your dependencies here, for example:
# rand = "0.8.4"
# regex = "1.5.4"

[build-dependencies]
# Add your build dependencies here if necessary