[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0.4"
reqwest = { version = "0.11.24", features = ["json"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
